Fix radio input horizontal alignment issue

--- a/client/galaxy/style/scss/ui.scss
+++ b/client/galaxy/style/scss/ui.scss
@@ -805,7 +805,7 @@ $ui-margin-horizontal-large: 10px;
     width: 100%;
     label {
         height: auto;
-        line-height: 1em;
+        line-height: 1.5em;
     }
 
     i {
